Update swagger annotations and API docummentation in swagger.json.
