# doc/swagger.json
@@ -40,11 +40,16 @@
               "application/json": {
                 "schema": {
                   "example": {
-                    "delivery": "http://sample/first.rdf#i1536680377163170",
-                    "testCenter": "http://sample/first.rdf#i1536680377163171",
-                    "testTakers": [
-                      "http://sample/first.rdf#i1536680377163172",
-                      "http://sample/first.rdf#i1536680377163173"
+                    "success": true,
+                    "data": [
+                      {
+                        "delivery": "http://sample/first.rdf#i1536680377163170",
+                        "testCenter": "http://sample/first.rdf#i1536680377163171",
+                        "testTakers": [
+                          "http://sample/first.rdf#i1536680377163172",
+                          "http://sample/first.rdf#i1536680377163173"
+                        ]
+                      }
                     ]
                   },
                   "$ref": "#/components/schemas/Eligibility"
@@ -52,14 +57,14 @@
               }
             }
           },
-          "404": {
+          "400": {
             "description": "Eligibility not found",
             "content": {
               "application/json": {
                 "schema": {
                   "example": {
                     "success": false,
-                    "errorCode": 404,
+                    "errorCode": 400,
                     "errorMsg": "Eligibility not found for provided search parameters.",
                     "version": "3.3.0-sprint85"
                   }
